--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -60,7 +60,7 @@ content %}
     </tr>
     <tr>
       <td><label>Credential:</label></td>
-      <td>{{ user.Credential if user else '' }}</td>
+      <td>{{ user.credentials if user else '' }}</td>
     </tr>
     <tr>
       <td><strong>Next Project:</strong></td>
