--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -177,7 +177,7 @@
                     <th class="col-session-type">Session Type</th>
                     <th class="col-session-title">Session Title</th>
                     <th class="col-owner">Owner</th>
-                    <th class="col-designation">Credentials</th>
+                    <th class="col-credentials">Credentials</th>
                     <th class="col-duration-min">Min</th>
                     <th class="col-duration-max">Max</th>
                     <th class="actions-column">Actions</th>
@@ -197,7 +197,7 @@
                     data-session-title="{{ log_dict.Session_Title if log_dict.Session_Title is not none else '' }}"
                     data-type-id="{{ log_dict.Type_ID }}"
                     data-owner-id="{{ log_dict.Owner_ID }}"
-                    data-designation="{{ log_dict.credentials if log_dict.credentials is not none else '' }}"
+                    data-credentials="{{ log_dict.credentials if log_dict.credentials is not none else '' }}"
                     data-duration-min="{{ log_dict.Duration_Min if log_dict.Duration_Min is not none else '' }}"
                     data-duration-max="{{ log_dict.Duration_Max if log_dict.Duration_Max is not none else '' }}"
                     data-status="{{ log_dict.Status if log_dict.Status else '' }}"
