--- a/app/templates/_session_modal.html
+++ b/app/templates/_session_modal.html
@@ -2,7 +2,11 @@
   <div class="modal-content">
     <span class="close" onclick="closeModal('addSessionModal')">&times;</span>
     <h1>Add New Session Type</h1>
-    <form action="{{ url_for('settings_bp.add_session_type') }}" method="POST">
+    <form
+      id="addSessionForm"
+      action="{{ url_for('settings_bp.add_session_type') }}"
+      method="POST"
+    >
       <table class="form-table">
         <tr>
           <td><label for="title">Title:</label></td>
@@ -95,7 +99,7 @@
         </tr>
       </table>
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Session</button>
+        <button type="submit" class="btn btn-primary">Save</button>
         <button
           type="button"
           class="btn btn-danger"
